--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "Simple GraphQL Server",
   "main": "index.js",
   "scripts": {
-    "dev:server": "nodemon server.js"
+    "dev:server": "nodemon server.js",
+    "json:server":"json-server --watch data.json"
   },
   "author": "melkam_beyene",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.26.1",
     "express": "^4.17.3",
     "express-graphql": "^0.12.0",
     "graphql": "^16.3.0",
+    "json-server": "^0.17.0",
     "nodemon": "^2.0.15"
   }
 }
